--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0"
   },
   "scripts": {
