--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",  
+    "server": "node ./server.js",
+    "start": "npm run server"
   },
   "eslintConfig": {
     "extends": "react-app"
